[package]
name = "ruscntl"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "0.97", features = ["runtime", "derive"] }
kube-runtime = "*"
k8s-openapi = { version = "0.23", features = ["v1_30"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
